--- a/rona-election/templates/index.html
+++ b/rona-election/templates/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<meta charset="utf-8">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -10,6 +9,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/9f741993fe.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Corona Fraud</title>
     <link rel="shortcut icon" href="#">
@@ -18,10 +18,10 @@
 <body>
     <section>
         <header>
-            <link rel="stylesheet" href="{{ url_for('static', filename='map.css') }}">
+            <link rel="stylesheet" href="map.css">
             <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
             <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-                <a class="navbar-bard" href="/" id="navBrand">
+                <a class="navbar-bard" href="#" id="navBrand">
                     <img src="#" width="30" height="30" alt="Rona Fraud">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#siteNavbar">
@@ -29,22 +29,40 @@
                 </button>
                 <div class ="collapse navbar-collapse" id="siteNavbar">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">Margin of Victory</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Covid Case Density</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Covid Case Density vs Margin of Victory</a></li>
-			            <li class="nav-item"><a class="nav-link" href="#">Hall of Shame</a></li> 
+                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
         </br>
-        <div id="map"></div>
-    </section>
-    <footer class="page-footer">
-        <div class="footer-copyright text-center py-3">© 2020 Copyright: The Meme Men
-            </br>
-            <a href="#">About</a>
+        <div class="sidenav">
+            <a href="#">Margin of Victory</a>
+            <a href="#">Covid Case Density</a>
+            <a href="#">Covid Case Density vs Margin of Victory</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
+            <a href="#">Hall of Shame</a>
         </div>
-        <script src="{{ url_for('static', filename='map.js') }}"></script>
-    </footer>
+        
+        <div id="map">
+        </div>
+        <footer>
+            <div id="botthing">
+                <p>© 2020 Copyright: The Meme Men</p>
+            </div>
+            <script src="js/map.js"></script>
+        </footer>
+    </section>
 <body>
