for some reason renaming map.css to style.css works?

--- a/rona-election/templates/index.html
+++ b/rona-election/templates/index.html
@@ -18,7 +18,7 @@
 <body>
     <section>
         <header>
-            <link rel="stylesheet" href="{{ url_for('static', filename='map.css') }}">
+            <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
             <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
             <nav class="navbar navbar-expand-md bg-dark navbar-dark">
                 <a class="navbar-bard" href="#" id="navBrand">
