--- a/rona-election/templates/index.html
+++ b/rona-election/templates/index.html
@@ -20,7 +20,7 @@
         <header>
             <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
             <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-            <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <nav class="navbar navbar-expand-md">
                 <a class="navbar-bard" href="#" id="navBrand">
                     <img src="#" width="30" height="30" alt="Rona Fraud">
                 </a>
@@ -29,6 +29,7 @@
                 </button>
                 <div class ="collapse navbar-collapse" id="siteNavbar">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">Hall of Shame</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     </ul>
                 </div>
@@ -36,24 +37,12 @@
         </header>
         </br>
         <div class="sidenav">
-            <a href="#">Margin of Victory</a>
-            <a href="#">Covid Case Density</a>
-            <a href="#">Covid Case Density vs Margin of Victory</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
-            <a href="#">Hall of Shame</a>
+            <a href="#">Deaths at date</a>
+            <a href="#">Cases at date</a>
+            <a href="#">Deaths / 100k at date</a>
+            <a href="#">Cases / 100k at date</a>
+            <a href="#">Deaths / 100k at date v. Margin of Victory</a>
+            <a href="#">Cases / 100k at date v. Margin of Victory</a>
         </div>
         
         <div id="map">
