working on about

--- a/rona-election/templates/index.html
+++ b/rona-election/templates/index.html
@@ -22,7 +22,7 @@
             <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
             <nav class="navbar navbar-expand-md">
                 <a class="navbar-bard" href="#" id="navBrand">
-                    <img src="#" width="30" height="30" alt="Rona Fraud">
+                    <img src="#" width="30" height="30" alt="Rona Election">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#siteNavbar">
                     <span class="navbar-toggler-icon"></span>
